i hope it works

--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -13,7 +13,7 @@
 			<td>{{contact.email}}</td>
 			<td>{{contact.birthdate}}</td>
 			<td>
-				<button class="btn btn-info" (click)="contactService.populateForm(contact)">Edit</button>
+				<button class="btn btn-success" (click)="contactService.populateForm(contact)">Edit</button>
 				<button class="btn btn-danger" (click)="onDelete(contact.$key)">Delete</button>
 			</td>
 		</tr>
